--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         }
     </style>
 </head>
-<body class="font-sans bg-gray-900 text-gray-200 min-h-screen">
+<body class="font-sans bg-gray-900 text-gray-200 min-h-screen pb-64">
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent" class="cookie-consent fixed bottom-0 left-0 right-0 p-4 flex flex-col md:flex-row items-center justify-between z-50">
         <div class="mb-4 md:mb-0 md:mr-4">
@@ -1422,6 +1422,12 @@
             </div>
         </div>
     </section>
+    <div class="border-t border-gray-800 mt-8 pt-8 text-center">
+            <p class="text-gray-400 text-sm">&copy; 2023 GenTeck Technology. All rights reserved.</p>
+    </div>
+
+    
+</body>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Theme Toggle
