Google meta tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="DtxmuQc5iF7OBufYv8J-LUzE2tb4DqntNsOou0BRENI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GenTeck Technology - Leading provider of AI solutions, cybersecurity services, and cloud computing with innovative tech solutions">
