--- a/index.html
+++ b/index.html
@@ -475,11 +475,11 @@
                 </div>
             </div>
             <div class="md:w-1/2 flex justify-center animate-fadeIn" style="animation-delay: 0.3s;">
-                <div class="relative">
+                <!--div class="relative">
                     <img src="https://images.unsplash.com/photo-1639762681057-1e71aac4b975?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="AI Technology" class="rounded-lg w-full max-w-lg border-2 border-cyber-blue border-opacity-50 shadow-xl">
                     <div class="absolute -bottom-5 -left-5 w-32 h-32 bg-cyber-purple rounded-full opacity-20 filter blur-xl"></div>
                     <div class="absolute -top-5 -right-5 w-32 h-32 bg-cyber-blue rounded-full opacity-20 filter blur-xl"></div>
-                </div>
+                </div-->
             </div>
         </div>
         
@@ -490,7 +490,7 @@
     </section>
 
     <!-- Clients Section -->
-    <section class="py-12 bg-gray-800">
+    <!--section class="py-12 bg-gray-800">
         <div class="container mx-auto px-4">
             <h2 class="text-center text-2xl font-medium mb-12 text-gray-400">Trusted by innovative companies worldwide</h2>
             <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16">
@@ -503,7 +503,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!- About Section -->
     <section id="about" class="py-20 bg-gray-900">
         <div class="container mx-auto px-4">
             <div class="text-center mb-16">
