--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta name="google-site-verification" content="DtxmuQc5iF7OBufYv8J-LUzE2tb4DqntNsOou0BRENI" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GenTeck Technology - Leading provider of AI solutions, cybersecurity services, and cloud computing with innovative tech solutions">
-    <meta name="keywords" content="AI solutions provider, tech innovation, cybersecurity services, cloud computing, IoT solutions">
+    <meta name="description" content="GenTeck Technology,KE - Leading provider of AI solutions, cybersecurity services, and cloud computing with innovative tech solutions">
+    <meta name="keywords" content="AI solutions, tech innovation, cybersecurity services, cloud computing, IoT solutions, networking, support and maintenance, supermarket POS software,software developers">
     <meta name="author" content="GenTeck Technology">
     <meta property="og:title" content="GenTeck Technology - Innovating Tomorrow's Solutions Today">
     <meta property="og:description" content="Cutting-edge technology solutions for businesses of all sizes">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.gentecktech.com">
     <meta property="og:image" content="https://images.unsplash.com/photo-1620712943543-bcc4688e7485?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80">
-    <title>GenTeck Technology | AI & Cybersecurity Solutions</title>
+    <title>GenTeck Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script>
