--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="w-10 h-10 bg-cyber-blue rounded-full flex items-center justify-center">
                     <i class="fas fa-microchip text-gray-900 text-xl"></i>
                 </div>
-                <h1 class="text-xl font-bold text-white">Gen<span class="text-cyber-blue">Teck</span></h1>
+                <h1 class="text-xl font-bold text-white">Gen<span class="text-cyber-blue">Teck Solution</span></h1>
             </div>
             
             <nav class="hidden md:flex space-x-8">
