--- a/index.html
+++ b/index.html
@@ -1405,7 +1405,7 @@
                             <a href="#" class="social-icon bg-cyan-400 text-gray-900 hover:bg-cyan-500">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="https://github.com/NgairaD/Gentekweb.git" class="social-icon bg-gray-700 text-white hover:bg-gray-800">
+                            <a href="https://github.com/NgairaD/" class="social-icon bg-gray-700 text-white hover:bg-gray-800">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="social-icon bg-pink-600 text-white hover:bg-pink-700">
