--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="GenTeck Technology,KE - Leading provider of AI solutions, cybersecurity services, and cloud computing with innovative tech solutions">
-    <meta name="keywords" content="AI solutions, tech innovation, cybersecurity services, cloud computing, IoT solutions, networking, support and maintenance, supermarket POS software,software developers">
+    <meta name="keywords" content="AI solutions in kenya, tech innovation in kenya, cybersecurity services in kenya, cloud computing in nairobi kenya,kenya IoT solutions, networking solutions in kenya, support and maintenancein nairobi, supermarket POS software in kenya,software developers in kenya">
     <meta name="author" content="GenTeck Technology">
     <meta property="og:title" content="GenTeck Technology - Innovating Tomorrow's Solutions Today">
     <meta property="og:description" content="Cutting-edge technology solutions for businesses of all sizes">
